--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,19 +6,28 @@
     android:gravity="center"
     android:orientation="vertical">
 
-
+    <ListView
+        android:divider="@null"
+        android:dividerHeight="0dp"
+        android:layout_marginTop="0dp"
+        android:id="@+id/frag1list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        />
 
     <Button
         android:id="@+id/btn_click_me"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:layout_gravity="center"
         android:background="@color/green"
         android:gravity="center"
-        android:text="CLICK ME"
+        android:paddingLeft="24dp"
+        android:paddingRight="24dp"
+        android:text="@string/clickme"
         android:textColor="@color/white"
         android:textSize="18sp"
-        android:paddingLeft="24dp"
-        android:paddingRight="24dp"/>
+        android:visibility="visible" />
 
 </LinearLayout>
