--- a/app/src/main/res/layout/fragment_share.xml
+++ b/app/src/main/res/layout/fragment_share.xml
@@ -6,13 +6,15 @@
     android:orientation="vertical"
     android:gravity="center">
 
+    <ListView
+        android:layout_marginTop="50dp"
+        android:divider="@null"
+        android:dividerHeight="10dp"
+        android:id="@+id/contactlist"
+        android:layout_width="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_height="wrap_content" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Share Fragment"
-        android:textSize="25sp"
-        android:layout_gravity="center"
-        android:gravity="center"/>
 
 </LinearLayout>
