--- a/app/src/main/res/layout/activity_code_it_out.xml
+++ b/app/src/main/res/layout/activity_code_it_out.xml
@@ -9,19 +9,41 @@
     <RelativeLayout
         android:layout_width="368dp"
         android:layout_height="551dp"
-        android:background="@color/black"
+        android:background="@color/chrome_grey"
         tools:layout_editor_absoluteY="8dp"
         tools:layout_editor_absoluteX="8dp">
+
 
         <Button
             android:id="@+id/btn1"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="0dp"
             android:background="@color/chrome_grey"
             android:text="Jojo"
             android:clickable="true"
+            android:visibility="invisible"
+            />
+        <Button
+            android:visibility="invisible"
+            android:layout_below="@id/btn1"
+            android:id="@+id/btn2"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@color/chrome_grey"
+            android:text="Jojo1"
+            android:clickable="true"
             />
 
+        <ListView
+            android:layout_below="@id/btn2"
+            android:divider="@null"
+            android:dividerHeight="0dp"
+            android:layout_marginTop="0dp"
+            android:id="@+id/subActList"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            />
 
     </RelativeLayout>
 
