--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,22 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
+    android:weightSum="10"
     android:orientation="vertical">
 
-    <ListView
-        android:divider="@null"
-        android:dividerHeight="0dp"
-        android:layout_marginTop="0dp"
-        android:id="@+id/frag1list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        />
+
 
     <Button
         android:id="@+id/btn_click_me"
         android:layout_width="wrap_content"
-        android:layout_height="100dp"
+        android:layout_height="1dp"
         android:layout_gravity="center"
         android:background="@color/green"
         android:gravity="center"
@@ -28,6 +21,35 @@
         android:text="@string/clickme"
         android:textColor="@color/white"
         android:textSize="18sp"
-        android:visibility="visible" />
+        android:visibility="invisible"
+        android:layout_weight="0"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="TechVibes18"
+        android:textSize="50dp"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        />
+
+    <GridView
+        android:layout_weight="9"
+        android:id="@+id/gridView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="5dp"
+        android:columnWidth="100dp"
+        android:drawSelectorOnTop="true"
+        android:gravity="center"
+        android:numColumns="auto_fit"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="0dp"
+        android:focusable="true"
+        android:clickable="true"/>
+
+
 
 </LinearLayout>
