--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -10,6 +10,6 @@
         android:top="2dp"
         android:bottom="2dp" />
 
-    <solid android:color="#00394c"/>
+    <solid android:color="@color/transparent"/>
 
 </shape>
