--- a/app/src/main/res/layout/contact_model.xml
+++ b/app/src/main/res/layout/contact_model.xml
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
         <TextView
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:layout_margin="5dp"
             android:textSize="20dp"
             android:text="Prageet N. Gupta"
@@ -31,7 +31,7 @@
             android:text="Prageet N. Gupta"
             android:layout_below="@id/name1"
             android:layout_marginLeft="10dp"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:id="@+id/desig"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
