--- a/app/src/main/res/layout/event_model.xml
+++ b/app/src/main/res/layout/event_model.xml
@@ -25,7 +25,7 @@
             />
         <RelativeLayout
             android:layout_weight="1"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
                 android:layout_marginTop="25dp"
@@ -54,7 +54,7 @@
         <TextView
             android:layout_weight="3"
             android:id="@+id/eventname2"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:padding="5sp"
