--- a/app/src/main/res/layout/fragment_share.xml
+++ b/app/src/main/res/layout/fragment_share.xml
@@ -4,17 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:background="@drawable/contacts2">
 
     <ListView
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="0dp"
         android:divider="@null"
         android:dividerHeight="10dp"
         android:id="@+id/contactlist"
         android:layout_width="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        />
 
 
 </LinearLayout>
