--- a/app/src/main/res/layout/activity_code_it_out.xml
+++ b/app/src/main/res/layout/activity_code_it_out.xml
@@ -1,41 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/container1"
     tools:context="com.f22labs.instalikefragmenttransaction.fragments.CodeItOut">
+    ]
 
     <RelativeLayout
-        android:layout_width="368dp"
-        android:layout_height="551dp"
+        android:id="@+id/relative1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@color/chrome_grey"
         tools:layout_editor_absoluteY="8dp"
         tools:layout_editor_absoluteX="8dp">
 
+        <ImageView
+            android:layout_height="50dp"
+            android:layout_width="50dp"
+            android:src="@drawable/logo1"
+            android:id="@+id/subactimage2"
+            android:transitionName="kittens"
+            />
 
-        <Button
-            android:id="@+id/btn1"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@color/chrome_grey"
-            android:text="Jojo"
-            android:clickable="true"
-            android:visibility="invisible"
-            />
-        <Button
-            android:visibility="invisible"
-            android:layout_below="@id/btn1"
-            android:id="@+id/btn2"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@color/chrome_grey"
-            android:text="Jojo1"
-            android:clickable="true"
-            />
 
         <ListView
-            android:layout_below="@id/btn2"
+            android:layout_below="@id/subactimage2"
             android:divider="@null"
             android:dividerHeight="0dp"
             android:layout_marginTop="0dp"
@@ -47,4 +38,4 @@
 
     </RelativeLayout>
 
-</RelativeLayout>
+</FrameLayout>
