--- a/app/src/main/res/layout/contact_model.xml
+++ b/app/src/main/res/layout/contact_model.xml
@@ -26,6 +26,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
+
+
         <TextView
             android:textSize="10dp"
             android:text="Prageet N. Gupta"
@@ -34,7 +36,20 @@
             android:textColor="@color/black"
             android:id="@+id/desig"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            />
+        <TextView
+            android:textSize="10dp"
+            android:text="Prageet N. Gupta"
+            android:layout_below="@id/name1"
+            android:layout_marginLeft="10dp"
+            android:textColor="@color/black"
+            android:id="@+id/desig1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="visible"
+            />
 
     </RelativeLayout>
 
