--- a/app/src/main/res/layout/grid_item_layout.xml
+++ b/app/src/main/res/layout/grid_item_layout.xml
@@ -8,16 +8,18 @@
 
     <ImageView
         android:id="@+id/gridimage"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         />
 
     <TextView
         android:id="@+id/gridtext"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:layout_marginTop="5dp"
         android:gravity="center"
-        android:textSize="12sp" />
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp" />
 
 </LinearLayout>
